# client

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.lock.old  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml
.devcontainer/: Dockerfile
.github/scripts/: build_ui.sh  cargo_build.ps1  cargo_build.sh  copy_libpkcs11.sh  cosmian_tests.sh  push_to_package_cosmian.sh  release.sh
.github/workflows/: build_all.yml  build_generic.yml  build_rhel9.yml  build_windows.yml  clippy.yml  main.yml  main_base.yml  main_release.yml
crate/cli/: Cargo.toml  README.md
crate/cli/src/: commands.rs  config.rs  lib.rs
crate/cli/src/actions/: console.rs  encrypt_and_add.rs  encrypt_and_index.rs  findex.rs  markdown.rs  mod.rs  search_and_decrypt.rs
crate/cli/src/actions/findex/: add_or_delete.rs  commands.rs  login.rs  logout.rs  mod.rs  parameters.rs  permissions.rs  search.rs
crate/cli/src/actions/findex_server/: actions.rs  datasets.rs  encrypt_and_index.rs  login.rs  logout.rs  mod.rs  permissions.rs  search_and_decrypt.rs  version.rs
crate/cli/src/actions/findex_server/findex/: findex_instance.rs  insert_or_delete.rs  (+3 more)
crate/cli/src/actions/kms/: access.rs  actions.rs  bench.rs  console.rs  hash.rs  login.rs  logout.rs  mac.rs  mod.rs  new_database.rs  version.rs
crate/cli/src/error/: mod.rs  result.rs
crate/cli/src/tests/: mod.rs
crate/cli/src/tests/findex/: add.rs  add_or_delete.rs  delete.rs  mod.rs  permissions.rs  search.rs  tests.rs
crate/cli/src/tests/findex_server/: tests.rs
crate/cli/src/tests/kms/: access.rs  auth_tests.rs  create_key.rs  hash.rs  mac.rs  mod.rs  new_database.rs
crate/client/: Cargo.toml
crate/client/src/: datasets.rs  findex_rest_client.rs  lib.rs  permissions.rs  rest_client.rs
crate/client/src/error/: mod.rs
crate/client/src/findex_server/: datasets.rs
crate/client/src/findex_server/kms/: requests.rs
crate/client_utils/: Cargo.toml
crate/client_utils/src/: attributes_utils.rs  cover_crypt_utils.rs  create_utils.rs  export_utils.rs  import_utils.rs  lib.rs  symmetric_utils.rs  wasm.rs
crate/client_utils/src/error/: mod.rs
crate/config/: Cargo.toml
crate/config/src/: config.rs  lib.rs
crate/config/src/error/: mod.rs  result.rs
crate/findex_client/: Cargo.toml
crate/findex_client/src/: findex_rest_client.rs
crate/findex_client/src/findex_server/: findex_rest_client.rs  permissions.rs  rest_client.rs
crate/findex_client/src/kms/: encryption_layer.rs  memory_adt.rs  requests.rs
crate/findex_rest_client/: Cargo.toml
crate/findex_rest_client/src/: findex_rest_client.rs  lib.rs
crate/findex_rest_client/src/error/: mod.rs  result.rs
crate/gui/: Cargo.toml
crate/gui/src/: commands.rs
crate/http_client/: Cargo.toml
crate/http_client/src/: http_client.rs  lib.rs
crate/http_client/src/error/: mod.rs
crate/kms_client/: Cargo.toml
crate/kms_client/src/: config.rs  encodings.rs  export_utils.rs  file_utils.rs  import_utils.rs  kms_rest_client.rs  lib.rs
crate/kms_client/src/error/: mod.rs
crate/kms_rest_client/: Cargo.toml
crate/kms_rest_client/src/: batch_utils.rs  encodings.rs  export_utils.rs  file_utils.rs  import_utils.rs  kms_rest_client.rs  lib.rs
crate/kms_rest_client/src/error/: mod.rs  result.rs
crate/pkcs11/: Cargo.toml  README.md  docker-compose.yml
crate/pkcs11/module/: Cargo.toml
crate/pkcs11/module/src/: lib.rs  objects_store.rs  pkcs11.rs  sessions.rs  tests.rs  utils.rs
crate/pkcs11/module/src/core/: attribute.rs  mechanism.rs  object.rs
crate/pkcs11/module/src/error/: mod.rs  result.rs
crate/pkcs11/module/src/traits/: backend.rs  encryption_algorithms.rs  key_algorithm.rs  mod.rs  private_key.rs  public_key.rs  symmetric_key.rs
crate/pkcs11/oracle/: README.md  cosmian.toml  okv_hsm_conf
crate/pkcs11/provider/: Cargo.toml
crate/pkcs11/provider/src/: backend.rs  kms_object.rs  lib.rs  logging.rs  pkcs11_certificate.rs  pkcs11_data_object.rs  pkcs11_private_key.rs  pkcs11_public_key.rs  pkcs11_symmetric_key.rs  tests.rs
crate/pkcs11/provider/src/error/: mod.rs  result.rs
crate/pkcs11/src/: backend.rs  kms_object.rs  tests.rs
crate/pkcs11/src/error/: mod.rs
crate/pyo3/: Cargo.toml
crate/pyo3/src/: py_kms_client.rs
crate/sqlserver_ekm/: Cargo.toml  Dockerfile  README.md
crate/sqlserver_ekm/src/: api.rs  configuration.rs  error.rs  lib.rs  logging.rs  ms_crypto.rs
crate/test_findex_server/: Cargo.toml
crate/test_findex_server/src/: test_server.rs
crate/test_kms_server/: Cargo.toml
crate/test_kms_server/benches/: rsa_benches.rs  symmetric_benches.rs
crate/test_kms_server/src/: lib.rs  test_jwt.rs  test_server.rs
crate/test_server/: Cargo.toml
crate/test_server/benches/: rsa_benches.rs  symmetric_benches.rs
crate/test_server/src/: lib.rs  test_jwt.rs  test_server.rs  test_server_findex.rs
crate/wasm/: Cargo.toml
crate/wasm/src/: wasm.rs
documentation/: README.md  mkdocs.yml
documentation/docs/: authentication.md  configuration.md  index.md  installation.md  usage.md
documentation/docs/cli/: main_commands.md
test_data/: kms-staging.json  kms_bad_group_id-staging.bad  kms_bad_group_id.bad  kms_bad_secret-staging.bad
test_data/configs/: cosmian.bad  cosmian.json  cosmian.toml  cosmian_bad_secret.bad  cosmian_cert_auth_owner.json  cosmian_cert_auth_owner.toml  cosmian_cert_auth_user.json  cosmian_cert_auth_user.toml  cosmian_for_bash.toml  cosmian_partial.json  cosmian_partial.toml  kms.bad  kms.json  kms_bad_secret.bad  kms_partial.json
ui/: README.md  package-lock.json  package.json  pnpm-lock.yaml
ui/src/: AccessGrant.tsx  AccessList.tsx  AccessObtained.tsx  AccessRevoke.tsx  App.tsx  AttributeDelete.tsx  AttributeSet.tsx  CertificateCertify.tsx  CertificateImport.tsx  CertificateValidate.tsx  CovercryptDecrypt.tsx  CovercryptEncrypt.tsx  CovercryptMasterKey.tsx  ECDecrypt.tsx  ECEncrypt.tsx  ECKeysCreate.tsx  HashMapDisplay.tsx  KeysExport.tsx  KeysImport.tsx  ObjectsDestroy.tsx  ObjectsRevoke.tsx  RsaKeysCreate.tsx  Sidebar.tsx  SymmetricDecrypt.tsx  SymmetricEncrypt.tsx  menuItems.tsx
(+117 files in other folders)
