[workspace]
default-members = ["crate/cli", "crate/gui", "crate/pkcs11/provider", "crate/wasm"]
members = [
    "crate/cli",
    "crate/findex_client",
    "crate/kms_client",
    "crate/gui",
    "crate/pkcs11/module",
    "crate/pkcs11/provider",
    "crate/client_utils",
    "crate/wasm",
]

# Do that if you don't want to enable `dev` feature by default due to the `dev-dependencies` of the cli.
# For more details, read: https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
# note: resolver defaults to 2 in 2021 edition crate, but defaults to 1 in virtual workspace
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.85.0"
authors = [
    "Bruno Grieder <bruno.grieder@cosmian.com>",
    "Emmanuel Coste <emmanuel.coste@cosmian.com>",
]
license = "BUSL-1.1" # "Business Source License 1.1"
license-file = "LICENSE"
repository = "https://github.com/Cosmian/client"
keywords = ["cosmian_cli", "kms", "findex", "findex-server", "cosmian"]
categories = ["security"]

[profile.release]
lto = true
strip = true

[profile.dev]
strip = "debuginfo"
incremental = false

# proc-macros and build-scripts
[profile.dev.build-override]
strip = "debuginfo"
incremental = false

# external dependencies
[profile.dev.package."*"]
opt-level = 0

[workspace.dependencies]
actix-server = { version = "2.5", default-features = false }
base64 = "0.22"
clap = { version = "4.5", default-features = false }
cosmian_config_utils = "0.2"
cosmian_cover_crypt = { version = "15.0", default-features = false }

### Local crates have been also declared here to simplify publishing - centralizing the versions
cosmian_kms_client_utils = { path = "crate/client_utils" }
cosmian_kms_client_wasm = { path = "crate/wasm" }
cosmian_kms_client = { path = "crate/kms_client" }
cosmian_findex_client = { path = "crate/findex_client" }
cosmian_cli = { path = "crate/cli" }
test_kms_server = { path = "crate/test_kms_server" }
test_findex_server = { path = "crate/test_findex_server" }
cosmian_pkcs11_module = { path = "crate/pkcs11/module" }
cosmian_pkcs11_provider = { path = "crate/pkcs11/provider" }
### Uncomment the following lines if you want to publish new crates
# cosmian_kms_client_utils = "0.4"
# cosmian_kms_client_wasm = "0.4"
# cosmian_kms_client = "0.4"
# cosmian_findex_client = "0.4"
# cosmian_cli = "0.4"
# test_kms_server = "0.4"
# test_findex_server = "0.4"
# cosmian_pkcs11_module = "0.4"
# cosmian_pkcs11_provider = "0.4"

cosmian_crypto_core = { version = "10.1", default-features = false, features = [
    "ser",
] }
cosmian_findex = { version = "7.1.0", default-features = false }
cosmian_findex_server = "0.3"
cosmian_findex_structs = "0.3"
cosmian_http_client = "0.2"
cosmian_logger = "0.2"

# cosmian_pkcs11_sys = "0.2"
# cosmian_kmip = "5.0"
# cosmian_kms_access = "5.0"
# cosmian_kms_crypto = "5.0"
# cosmian_kms_server = "5.0"
# cosmian_kms_server_database = "5.0"
# Uncomment the following lines to use the latest develop branch of Cosmian KMS
cosmian_pkcs11_sys = { git = "https://www.github.com/Cosmian/kms", branch = "develop" }
cosmian_kmip = { git = "https://www.github.com/Cosmian/kms", branch = "develop" }
cosmian_kms_access = { git = "https://www.github.com/Cosmian/kms", branch = "develop" }
cosmian_kms_crypto = { git = "https://www.github.com/Cosmian/kms", branch = "develop" }
cosmian_kms_server = { git = "https://www.github.com/Cosmian/kms", branch = "develop" }
cosmian_kms_server_database = { git = "https://www.github.com/Cosmian/kms", branch = "develop" }

der = { version = "0.7", default-features = false }
hex = { version = "0.4", default-features = false }
leb128 = "0.2"
log = { version = "0.4", default-features = false }
num-format = "0.4"
pem = "3.0"
openssl = { version = "0.10", default-features = false }
rand = "0.9.1"
reqwest = { version = "0.11", default-features = false }
serde = "1.0"
serde_json = "1.0"
strum = { version = "0.27", default-features = false }
thiserror = "2.0"
tokio = { version = "1.43", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
url = "2.5"
uuid = "=1.11.1"
x509-cert = { version = "0.2", default-features = false }
x509-parser = "0.17"
zeroize = { version = "1.8", default-features = false }
