[package]
name = "cosmian_findex_rest_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]

[dependencies]
base64 = { workspace = true }
clap = { workspace = true }
cosmian_http_client = { path = "../http_client" }
cosmian_config = { path = "../config" }
der = { workspace = true }
pem = { workspace = true }
reqwest = { workspace = true, features = ["default", "json", "native-tls"] }
rustls = { workspace = true, features = ["dangerous_configuration"] }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
x509-cert = { workspace = true }
uuid = { workspace = true }
