[package]
name = "ckms_gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Graphical interface for the CLI to interact with Cosmian KMS"

[features]
fips = ["cosmian_kms_rest_client/fips"]

[dependencies]
clap = "4.4"
cosmian_kms_cli = { path = "../cli" }
cosmian_kms_rest_client = { path = "../kms_rest_client" }
# cosmian_findex_rest_client = { path = "../findex_rest_client" }
cosmian_config = { path = "../config" }
cosmian_logger = { workspace = true }

klask = { git = "https://github.com/Cosmian/klask.git" }
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
