[package]
name = "cosmian_http_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]

[dependencies]
reqwest = { workspace = true, features = ["default", "json", "native-tls"] }
rustls = { workspace = true, features = ["dangerous_configuration"] }
thiserror = { workspace = true }
webpki-roots = "0.22"
