[package]
name = "ckms_pkcs11"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "ckms_pkcs11"
crate-type = ["rlib", "dylib"]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[dependencies]
cosmian_kmip = { workspace = true }
cosmian_kms_rest_client = { path = "../kms_rest_client" }
cosmian_config = { path = "../config" }
cosmian_pkcs11_module = { git = "https://www.github.com/Cosmian/kms", branch = "chore/reuse_ckms_in_cosmian_cli" }
serde_json = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-error = "0.2.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
x509-cert = { workspace = true }
zeroize = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = "0.3.0"

[dev-dependencies]
cosmian_logger = { workspace = true }
kms_test_server = { path = "../test_server" }
