[package]
name = "cosmian_sqlserver_ekm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "cosmian_sqlserver_ekm"
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.9", features = ["wincrypt", "minwindef", ] }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true, features = ["derive"] }
libc = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
