[package]
name = "cosmian_sqlserver_ekm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "cosmian_sqlserver_ekm"
crate-type = ["cdylib"]

[dependencies]
base64 = { workspace = true }
cosmian_config_utils = { workspace = true }
cosmian_kmip = { workspace = true }
cosmian_kms_client = { workspace = true }
etcetera = "0.10.0"
libc = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true, features = ["derive"] }
snafu = { workspace = true, features = ["std"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
winapi = { version = "0.3.9", features = ["wincrypt", "minwindef"] }
