[package]
name = "cosmian_kms_client_wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[features]
fips = []
default = ["getrandom/js"]

[dependencies]
cosmian_kmip = { workspace = true }
cosmian_crypto_core = { workspace = true, features = ["ser"] }
pem = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
cosmian_kms_client_utils = { path= "../client_utils" }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
strum.workspace = true
base64.workspace = true
web-sys = { version = "0.3", features = ["console"] }
x509-cert = { workspace = true, features = ["pem"] }
getrandom = { version = "0.2", features = ["js"], optional = true }
